# TC2004Class

./: README.md
Clase/ArregloNNP/: ArregloNNP.cpp  test1
Clase/Entrega2_old/: CMakeLists.txt  Documents.h  PV.h  Printers.h  main.cpp
Clase/FactoryMethod/: FactoryMethod.cpp  FactoryMethod2.cpp  test1
Clase/ObserverPattern/: CMakeLists.txt  DTrump.cpp  DTrump.h  NBCNews.h  Observer.cpp  Observer.h  PenaNieto.cpp  PenaNieto.h  Reforma.cpp  Reforma.h  Subject.cpp  Subject.h  Televisa.cpp  Televisa.h  main.cpp
Clase/Prototype/: Prototype.cpp  PrototypeTemplates.cpp  constructores.cpp  test1
Clase/Singleton/: test1
Clase/TestEntrega2/: NewDocuments.h  main.cpp  test1
Clase/VisitorPattern/: test1  visitorAfter.cpp  visitorBefore.cpp
Entregas/CadenaDeResponsabilidad/: CMakeLists.txt  DNSServer.h  main.cpp
Entregas/EjercicioVisitorSingleton/: test1  visitorSingleton_idea2.cpp
Entregas/Entrega1/: CMakeLists.txt  main.cpp
Entregas/Entrega2/: main.cpp
Entregas/Evaluacion1/: Inventario.h  Videojuego.h  main.cpp  test1
Entregas/Evaluacion1 - Correcciones/: CMakeLists.txt  Inventario.h  main.cpp
Entregas/EvaluacionFinal/: CMakeLists.txt  GameAssets.h  REDME.md  main.cpp
Entregas/NaturalesPerfectos/: ArregloNNP.cpp  Proxy.cpp
Entregas/ObserverPattern/: NBCNews.cpp  PenaNieto.h  Televisa.h  main.cpp
Entregas/TareaFinal/: CMakeLists.txt  MemManager.h  Old_ignorar.h  README.md  TrashTruck.h  main.cpp
Prototype/: prototypeTemplate.cpp
Singleton/: Main.cpp  Timer.h
